--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +87,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, let's read the data we have collected for."
+    "Finally, let's read the data we have collected for this problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2116,16 +2116,74 @@
        "49 -0.008956   20.22      0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load analytical base table from Module 2\n",
+    "# Load kaggle credit card transactions data\n",
     "df = pd.read_csv('creditcard.csv')\n",
     "\n",
     "df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span id=\"split\"></span>\n",
+    "# 1. Split your dataset\n",
+    "\n",
+    "let's start by splitting our data into separate training and test sets. \n",
+    "\n",
+    "<br>\n",
+    "**First, separate the dataframe into separate objects for the target variable, <code style=\"color:steelblue\">y</code>, and the input features, <code style=\"color:steelblue\">X</code>.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create separate object for target variable\n",
+    "y = df.Class\n",
+    "\n",
+    "# Create separate object for input features\n",
+    "X = df.drop('Class', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**After you've imported the <code style=\"color:steelblue\">train_test_split()</code> function, split <code style=\"color:steelblue\">X</code> and <code style=\"color:steelblue\">y</code> into training and test sets.**\n",
+    "* Pass in the argument <code style=\"color:steelblue\">test_size=<span style=\"color:crimson\">0.2</span></code> to set aside 20% of our observations for the test set.\n",
+    "* Pass in <code style=\"color:steelblue\">random_state=<span style=\"color:crimson\">1234</span></code> to set the random state for replicable results.\n",
+    "* **Important:** Also pass in the argument <code style=\"color:steelblue\">stratify=<span style=\"color:crimson\">df.Class</span></code> in order to make sure the target variable's classes are balanced in each subset of data! This is **stratified random sampling**.\n",
+    "* Then, print the number of observations in each subset to check that it was done correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "227845 56962 227845 56962\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split X and y into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1234, stratify=df.Class)\n",
+    "\n",
+    "# Print number of observations in X_train, X_test, y_train, and y_test\n",
+    "print( len(X_train), len(X_test), len(y_train), len(y_test) )"
    ]
   },
   {
