building model pipelines and declaring hyperparameters to tune

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -2187,6 +2187,191 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span id=\"pipelines\"></span>\n",
+    "# 2. Build model pipelines\n",
+    "\n",
+    "Next, let's set up preprocessing pipelines for each of our algorithms.\n",
+    "\n",
+    "<br>\n",
+    "**Create a single <span style=\"color:royalblue\">pipeline dictionary</span> with pipelines for each algorithm**.\n",
+    "* Use the keys:\n",
+    "    * <code style=\"color:crimson\">'l1'</code> for $L_1$-regularized logistic regression\n",
+    "    * <code style=\"color:crimson\">'l2'</code> for $L_2$-regularized logistic regression\n",
+    "    * <code style=\"color:crimson\">'rf'</code> for random forest\n",
+    "    * <code style=\"color:crimson\">'gb'</code> for gradient boosted tree.\n",
+    "* Each pipeline should standardize the data first.\n",
+    "* Remember to set <code style=\"color:steelblue\">random_state=<span style=\"color:crimson\">123</span></code> for each algorithm to ensure replicable results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pipeline dictionary\n",
+    "pipelines = {\n",
+    "    'l1': make_pipeline(StandardScaler(), LogisticRegression(penalty='l1', random_state=123)),\n",
+    "    'l2': make_pipeline(StandardScaler(), LogisticRegression(penalty='l2', random_state=123)),\n",
+    "    'rf': make_pipeline(StandardScaler(), RandomForestClassifier(random_state=123)),\n",
+    "    'gb': make_pipeline(StandardScaler(), GradientBoostingClassifier(random_state=123))\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span id=\"hyperparameters\"></span>\n",
+    "# 3. Declare hyperparameters to tune\n",
+    "\n",
+    "Next, let's declare hyperparameters to tune.\n",
+    "\n",
+    "<br>\n",
+    "**First, list the tunable hyperparameters of your $L_1$-regularized logistic regression pipeline.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'logisticregression': LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "           intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "           penalty='l1', random_state=123, solver='liblinear', tol=0.0001,\n",
+       "           verbose=0, warm_start=False),\n",
+       " 'logisticregression__C': 1.0,\n",
+       " 'logisticregression__class_weight': None,\n",
+       " 'logisticregression__dual': False,\n",
+       " 'logisticregression__fit_intercept': True,\n",
+       " 'logisticregression__intercept_scaling': 1,\n",
+       " 'logisticregression__max_iter': 100,\n",
+       " 'logisticregression__multi_class': 'ovr',\n",
+       " 'logisticregression__n_jobs': 1,\n",
+       " 'logisticregression__penalty': 'l1',\n",
+       " 'logisticregression__random_state': 123,\n",
+       " 'logisticregression__solver': 'liblinear',\n",
+       " 'logisticregression__tol': 0.0001,\n",
+       " 'logisticregression__verbose': 0,\n",
+       " 'logisticregression__warm_start': False,\n",
+       " 'memory': None,\n",
+       " 'standardscaler': StandardScaler(copy=True, with_mean=True, with_std=True),\n",
+       " 'standardscaler__copy': True,\n",
+       " 'standardscaler__with_mean': True,\n",
+       " 'standardscaler__with_std': True,\n",
+       " 'steps': [('standardscaler',\n",
+       "   StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
+       "  ('logisticregression',\n",
+       "   LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "             intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "             penalty='l1', random_state=123, solver='liblinear', tol=0.0001,\n",
+       "             verbose=0, warm_start=False))]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List tuneable hyperparameters of our Logistic pipeline\n",
+    "pipelines['l1'].get_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's declare the **hyperparameter grids** to tune."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic Regression hyperparameters\n",
+    "l1_hyperparameters = {\n",
+    "    'logisticregression__C' : np.linspace(1e-3, 1e3, 10),\n",
+    "}\n",
+    "\n",
+    "l2_hyperparameters = {\n",
+    "    'logisticregression__C' : np.linspace(1e-3, 1e3, 10),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Declare the hyperparameter grid for the random forest.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest hyperparameters\n",
+    "rf_hyperparameters = {\n",
+    "    'randomforestclassifier__n_estimators': [100, 200],\n",
+    "    'randomforestclassifier__max_features': ['auto', 'sqrt', 0.33]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Declare the hyperparameter grid for the boosted tree.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boosted Tree hyperparameters\n",
+    "gb_hyperparameters = {\n",
+    "    'gradientboostingclassifier__n_estimators': [100, 200],\n",
+    "    'gradientboostingclassifier__learning_rate': [0.05, 0.1, 0.2],\n",
+    "    'gradientboostingclassifier__max_depth': [1, 3, 5]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Create a <code style=\"color:steelblue\">hyperparameters</code> dictionary**.\n",
+    "* Use the same keys as in the <code style=\"color:steelblue\">pipelines</code> dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create hyperparameters dictionary\n",
+    "hyperparameters = {\n",
+    "    'l1' : l1_hyperparameters,\n",
+    "    'l2' : l2_hyperparameters,\n",
+    "    'rf' : rf_hyperparameters,\n",
+    "    'gb' : gb_hyperparameters\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
